@@ -1,53 +1,81 @@
 package gg.modl.minecraft.bridge.reporter;
 
 import com.google.gson.Gson;
+import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 
 import java.io.BufferedReader;
 import java.io.File;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.time.Duration;
+import java.util.LinkedHashMap;
+import java.util.Locale;
+import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.RejectedExecutionException;
+import java.util.concurrent.ThreadFactory;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.Logger;
 
-public class ModlBackendReplayUploader {
+public class ModlBackendReplayUploader implements AutoCloseable {
 
     private final String backendUrl;
     private final String apiKey;
     private final String serverDomain;
     private final Logger logger;
     private final Gson gson;
+    private final ExecutorService uploadExecutor;
+    private final boolean ownsUploadExecutor;
+    private final AtomicBoolean closed = new AtomicBoolean(false);
+    private final ConcurrentHashMap.KeySetView<CompletableFuture<String>, Boolean> pendingUploads =
+            ConcurrentHashMap.newKeySet();
 
     private static final String USER_AGENT = "modl-minecraft";
     private static final int CONNECT_TIMEOUT_MS = (int) Duration.ofSeconds(10).toMillis();
     private static final int READ_TIMEOUT_MS = (int) Duration.ofSeconds(30).toMillis();
     private static final int UPLOAD_READ_TIMEOUT_MS = (int) Duration.ofMinutes(5).toMillis();
-
     public ModlBackendReplayUploader(String backendUrl, String apiKey, String serverDomain, Logger logger) {
+        this(backendUrl, apiKey, serverDomain, logger, createUploadExecutor(), true);
+    }
+
+    ModlBackendReplayUploader(String backendUrl, String apiKey, String serverDomain, Logger logger,
+                              ExecutorService uploadExecutor) {
+        this(backendUrl, apiKey, serverDomain, logger, uploadExecutor, false);
+    }
+
+    private ModlBackendReplayUploader(String backendUrl, String apiKey, String serverDomain, Logger logger,
+                                      ExecutorService uploadExecutor, boolean ownsUploadExecutor) {
         this.backendUrl = normalizeBackendUrl(backendUrl);
         this.apiKey = apiKey;
         this.serverDomain = serverDomain;
         this.logger = logger;
         this.gson = new Gson();
+        this.uploadExecutor = uploadExecutor;
+        this.ownsUploadExecutor = ownsUploadExecutor;
     }
 
     private static String normalizeBackendUrl(String backendUrl) {
-        if (backendUrl == null) {
-            return null;
-        }
-
-        String normalized = backendUrl.trim();
+        URI uri = parseTrustedHttpUri(backendUrl, "backend URL", false);
+        String normalized = uri.toString();
         while (normalized.endsWith("/")) {
             normalized = normalized.substring(0, normalized.length() - 1);
         }
 
+        int schemeSeparator = normalized.indexOf("://");
         int lastSlash = normalized.lastIndexOf('/');
-        if (lastSlash > normalized.indexOf("://") + 2) {
+        if (lastSlash > schemeSeparator + 2) {
             String lastSegment = normalized.substring(lastSlash + 1);
             if (lastSegment.matches("v\\d+")) {
                 return normalized.substring(0, lastSlash);
@@ -58,24 +86,70 @@ public class ModlBackendReplayUploader {
     }
 
     public CompletableFuture<String> uploadAsync(File replayFile, String mcVersion) {
-        return CompletableFuture.supplyAsync(() -> {
-            try {
-                InitResponse init = initUpload(replayFile, mcVersion);
-                uploadToStorage(replayFile, init.uploadUrl);
-                confirmUpload(init.replayId);
-                return init.replayId;
-            } catch (Exception e) {
-                throw new RuntimeException("Replay upload failed: " + e.getMessage(), e);
-            }
-        });
+        return uploadAsync(replayFile, mcVersion, null, null);
     }
 
-    private InitResponse initUpload(File file, String mcVersion) throws Exception {
+    public CompletableFuture<String> uploadAsync(File replayFile, String mcVersion, UUID targetUuid, String targetName) {
+        throwIfClosed();
+
+        CompletableFuture<String> future = new CompletableFuture<>();
+        pendingUploads.add(future);
+        if (closed.get()) {
+            pendingUploads.remove(future);
+            RejectedExecutionException exception = new RejectedExecutionException("Replay uploader is closed");
+            future.completeExceptionally(exception);
+            throw exception;
+        }
+
+        Runnable uploadTask = () -> {
+            try {
+                throwIfClosed();
+                InitResponse init = initUpload(replayFile, mcVersion, targetUuid, targetName);
+                throwIfClosed();
+                uploadToStorage(replayFile, init);
+                throwIfClosed();
+                confirmUpload(init.replayId);
+                future.complete(init.replayId);
+            } catch (Exception e) {
+                future.completeExceptionally(new RuntimeException("Replay upload failed: " + e.getMessage(), e));
+            } finally {
+                pendingUploads.remove(future);
+            }
+        };
+
+        try {
+            uploadExecutor.execute(uploadTask);
+        } catch (RejectedExecutionException e) {
+            pendingUploads.remove(future);
+            future.completeExceptionally(e);
+            throw e;
+        }
+
+        return future;
+    }
+
+    @Override
+    public void close() {
+        closed.set(true);
+        RejectedExecutionException closedException = new RejectedExecutionException("Replay uploader is closed");
+        pendingUploads.forEach(future -> future.completeExceptionally(closedException));
+        if (ownsUploadExecutor) {
+            uploadExecutor.shutdownNow();
+        }
+    }
+
+    private InitResponse initUpload(File file, String mcVersion, UUID targetUuid, String targetName) throws Exception {
         JsonObject body = new JsonObject();
         body.addProperty("mcVersion", mcVersion);
         body.addProperty("fileSize", file.length());
+        if (targetUuid != null) {
+            body.addProperty("targetUuid", targetUuid.toString());
+        }
+        if (targetName != null && !targetName.isEmpty()) {
+            body.addProperty("targetName", targetName);
+        }
 
-        HttpURLConnection connection = (HttpURLConnection) new URL(backendUrl + "/v1/minecraft/replays/upload").openConnection();
+        HttpURLConnection connection = openBackendConnection("/v1/minecraft/replays/upload");
         try {
             connection.setRequestMethod("POST");
             connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
@@ -102,28 +176,65 @@ public class ModlBackendReplayUploader {
                 throw new RuntimeException("Malformed init response: " + responseBody);
             }
 
+            String method = (json.has("method") && json.get("method").isJsonPrimitive())
+                    ? json.get("method").getAsString() : null;
+
+            Map<String, String> requiredHeaders = new LinkedHashMap<>();
+            if (json.has("requiredHeaders") && json.get("requiredHeaders").isJsonObject()) {
+                for (Map.Entry<String, JsonElement> entry : json.getAsJsonObject("requiredHeaders").entrySet()) {
+                    try {
+                        if (entry.getValue() != null && entry.getValue().isJsonPrimitive()) {
+                            requiredHeaders.put(entry.getKey(), entry.getValue().getAsString());
+                        }
+                    } catch (RuntimeException ignored) {
+                        // Skip malformed header entries rather than aborting upload-init.
+                    }
+                }
+            }
+
             return new InitResponse(
                     json.get("replayId").getAsString(),
-                    json.get("uploadUrl").getAsString()
+                    json.get("uploadUrl").getAsString(),
+                    method,
+                    requiredHeaders
             );
         } finally {
             connection.disconnect();
         }
     }
 
-    private void uploadToStorage(File file, String presignedUrl) throws Exception {
-        HttpURLConnection connection = (HttpURLConnection) new URL(presignedUrl).openConnection();
+    private void uploadToStorage(File file, InitResponse init) throws Exception {
+        URL uploadUrl = parseTrustedHttpUri(init.uploadUrl, "presigned upload URL", true).toURL();
+        HttpURLConnection connection = (HttpURLConnection) uploadUrl.openConnection();
         try {
-            connection.setRequestMethod("PUT");
+            String method = (init.method != null && !init.method.trim().isEmpty())
+                    ? init.method.trim().toUpperCase(Locale.ROOT) : "PUT";
+            connection.setRequestMethod(method);
             connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
             connection.setReadTimeout(UPLOAD_READ_TIMEOUT_MS);
-            connection.setRequestProperty("Content-Type", "application/octet-stream");
-            connection.setRequestProperty("User-Agent", USER_AGENT);
+            connection.setFixedLengthStreamingMode(file.length());
             connection.setDoOutput(true);
 
-            byte[] fileBytes = Files.readAllBytes(file.toPath());
+            // Apply backend-signed headers verbatim so they match the presigned signature.
+            boolean contentTypeSupplied = false;
+            if (init.requiredHeaders != null) {
+                for (Map.Entry<String, String> header : init.requiredHeaders.entrySet()) {
+                    String name = header.getKey();
+                    String value = header.getValue();
+                    if (name == null || value == null || value.trim().isEmpty()) continue;
+                    // Content-Length is owned by setFixedLengthStreamingMode; never override it.
+                    if ("Content-Length".equalsIgnoreCase(name)) continue;
+                    if ("Content-Type".equalsIgnoreCase(name)) contentTypeSupplied = true;
+                    connection.setRequestProperty(name, value);
+                }
+            }
+            if (!contentTypeSupplied) {
+                connection.setRequestProperty("Content-Type", "application/octet-stream");
+            }
+            connection.setRequestProperty("User-Agent", USER_AGENT);
+
             try (OutputStream os = connection.getOutputStream()) {
-                os.write(fileBytes);
+                Files.copy(file.toPath(), os);
             }
 
             int statusCode = connection.getResponseCode();
@@ -137,7 +248,7 @@ public class ModlBackendReplayUploader {
     }
 
     private void confirmUpload(String replayId) throws Exception {
-        HttpURLConnection connection = (HttpURLConnection) new URL(backendUrl + "/v1/minecraft/replays/confirm/" + replayId).openConnection();
+        HttpURLConnection connection = openBackendConnection("/v1/minecraft/replays/confirm/" + replayId);
         try {
             connection.setRequestMethod("POST");
             connection.setConnectTimeout(CONNECT_TIMEOUT_MS);
@@ -164,7 +275,7 @@ public class ModlBackendReplayUploader {
 
     private String readResponseBody(HttpURLConnection connection) {
         try {
-            java.io.InputStream stream = connection.getResponseCode() >= 400
+            InputStream stream = connection.getResponseCode() >= 400
                     ? connection.getErrorStream() : connection.getInputStream();
             if (stream == null) return "";
             StringBuilder sb = new StringBuilder();
@@ -180,13 +291,75 @@ public class ModlBackendReplayUploader {
         }
     }
 
+    private HttpURLConnection openBackendConnection(String path) throws Exception {
+        URL url = URI.create(backendUrl + path).toURL();
+        return (HttpURLConnection) url.openConnection();
+    }
+
+    private static URI parseTrustedHttpUri(String rawUrl, String label, boolean allowQuery) {
+        if (rawUrl == null) {
+            throw new IllegalArgumentException("Unsupported " + label + ": missing URL");
+        }
+
+        String trimmed = rawUrl.trim();
+        if (trimmed.isEmpty()) {
+            throw new IllegalArgumentException("Unsupported " + label + ": missing URL");
+        }
+
+        URI uri;
+        try {
+            uri = URI.create(trimmed);
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("Unsupported " + label + ": malformed URL", e);
+        }
+
+        String scheme = uri.getScheme();
+        if (!"http".equalsIgnoreCase(scheme) && !"https".equalsIgnoreCase(scheme)) {
+            throw new IllegalArgumentException("Unsupported " + label + ": scheme must be http or https");
+        }
+        if (uri.getHost() == null || uri.getHost().trim().isEmpty()) {
+            throw new IllegalArgumentException("Unsupported " + label + ": missing host");
+        }
+        if (!allowQuery && uri.getRawQuery() != null) {
+            throw new IllegalArgumentException("Unsupported " + label + ": query is not allowed");
+        }
+        if (uri.getRawFragment() != null) {
+            throw new IllegalArgumentException("Unsupported " + label + ": query and fragment are not allowed");
+        }
+
+        return uri;
+    }
+
+    private void throwIfClosed() {
+        if (closed.get()) {
+            throw new RejectedExecutionException("Replay uploader is closed");
+        }
+    }
+
+    private static ExecutorService createUploadExecutor() {
+        return Executors.newSingleThreadExecutor(new ThreadFactory() {
+            private final AtomicInteger nextId = new AtomicInteger(1);
+
+            @Override
+            public Thread newThread(Runnable runnable) {
+                Thread thread = new Thread(runnable, "modl-replay-upload-" + nextId.getAndIncrement());
+                thread.setDaemon(true);
+                return thread;
+            }
+        });
+    }
+
     private static class InitResponse {
         final String replayId;
         final String uploadUrl;
+        final String method;
+        final Map<String, String> requiredHeaders;
 
-        InitResponse(String replayId, String uploadUrl) {
+        InitResponse(String replayId, String uploadUrl, String method, Map<String, String> requiredHeaders) {
             this.replayId = replayId;
             this.uploadUrl = uploadUrl;
+            this.method = method;
+            this.requiredHeaders = requiredHeaders;
         }
     }
 }
